# a-maze-ing

./: Makefile  README.md  a_maze_ing.py  config.txt  mazegen-0.1.0-py3-none-any.whl  output_maze.txt  pyproject.toml
docs/: README.md  plan.md
mazegen/: __init__.py  config.py  generator.py  model.py  output.py  pattern.py  render.py  solver.py
tools/: validate_sample.py
